force-app/main/default/objects/Submission__c/fields/Extended_Review__c.field-meta.xml
<CustomField>
    <fullName>Extended_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Review</label>
    <type>Checkbox</type>
</CustomField>