force-app/main/default/objects/Submission__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language of the system that submitted the loan-app...</description>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>