force-app/main/default/objects/Submission__c/fields/Lender_LinkId__c.field-meta.xml
<CustomField>
    <fullName>Lender_LinkId__c</fullName>
    <description>Lender LinkId</description>
    <inlineHelpText>Lender&apos;s LinkId</inlineHelpText>
    <label>Lender LinkId</label>
    <length>37</length>
    <type>Text</type>
</CustomField>