force-app/main/default/objects/Submission__c/fields/Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Mortgage__c</fullName>
    <description>Submission associated with Mortgage</description>
    <inlineHelpText>Submission associated with Mortgage</inlineHelpText>
    <label>Mortgage</label>
    <referenceTo>Mortgage__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>