force-app/main/default/objects/Submission__c/fields/Originator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Originator_Notes__c</fullName>
    <description>Notes to lender from the user submitting the application</description>
    <inlineHelpText>Notes to lender from the user submitting the application</inlineHelpText>
    <label>Originator Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>