force-app/main/default/objects/Submission__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <description>Date/Time application was submitted.</description>
    <label>Request Time</label>
    <type>DateTime</type>
</CustomField>