force-app/main/default/objects/Submission__c/fields/Routing_Receiver__c.field-meta.xml
<CustomField>
    <fullName>Routing_Receiver__c</fullName>
    <description>Receiving user routing details</description>
    <label>Routing Receiver</label>
    <length>32</length>
    <type>Text</type>
</CustomField>