force-app/main/default/objects/Submission__c/fields/Routing_Sender__c.field-meta.xml
<CustomField>
    <fullName>Routing_Sender__c</fullName>
    <description>Sending User Routing Details</description>
    <label>Routing Sender</label>
    <length>32</length>
    <type>Text</type>
</CustomField>