force-app/main/default/objects/Submission__c/fields/Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Submission_Number__c</fullName>
    <label>Submission Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>